--- a/style.css
+++ b/style.css
@@ -25,5 +25,5 @@ ul {
 	 border: 1px solid green;
 	 border-radius: 15px;
 	 padding: 0px 10px 0px;
-	 background-color: ;
+	 background-color: transparent;
 }
